--- a/index.html
+++ b/index.html
@@ -5,75 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/output.css" />
     <link rel="icon" href="src/image/logoWeb.png" />
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>RY Store</title>
   </head>
-  <body class="bg-dark1">
+  <body class="bg-dark1 font-poppins">
     <nav
       class="bg-dark2 text-white flex justify-between items-center w-full h-[70px]"
     >
-      <div class="ml-14">
+      <div class="ml-3 md:ml-14">
         <!-- <p class="font-bold text-lg">LOGO</p> -->
         <img
           src="src/image/logo3transparan.png"
           alt="Logo"
-          class="object-cover w-[8rem]"
+          class="object-cover hidden md:flex w-[8rem]"
+        />
+        <img
+          src="src/image/logoMobile.png"
+          alt="Logo"
+          class="object-cover flex w-12 md:hidden"
         />
       </div>
       <div
-        class="flex items-center justify-between bg-slate-900 bg-opacity-50 w-96 rounded-md h-9"
+        class="flex items-center justify-end gap-3 md:w-4/6 md:justify-between"
       >
-        <svg
-          class="mx-3 mt-1 text-white"
-          fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg"
-          x="0px"
-          y="0px"
-          width="23"
-          height="23"
-          viewBox="0 0 24 24"
+        <div
+          class="flex items-center justify-between bg-slate-900 bg-opacity-50 rounded-md h-9 w-1/2"
         >
-          <path
-            d="M 9 2 C 5.1458514 2 2 5.1458514 2 9 C 2 12.854149 5.1458514 16 9 16 C 10.747998 16 12.345009 15.348024 13.574219 14.28125 L 14 14.707031 L 14 16 L 20 22 L 22 20 L 16 14 L 14.707031 14 L 14.28125 13.574219 C 15.348024 12.345009 16 10.747998 16 9 C 16 5.1458514 12.854149 2 9 2 z M 9 4 C 11.773268 4 14 6.2267316 14 9 C 14 11.773268 11.773268 14 9 14 C 6.2267316 14 4 11.773268 4 9 C 4 6.2267316 6.2267316 4 9 4 z"
-          ></path>
-        </svg>
-        <input
-          id="inputNav"
-          spellcheck="false"
-          type="text"
-          class="w-full bg-transparent outline-none text-white"
-          placeholder="Cari di sini..."
-          autocomplete="off"
-        />
-        <svg
-          id="closeInputNav"
-          class="bi bi-x mx-1 mt-[1px] p-1 cursor-pointer bg-transparent rounded-md transition duration-200 hover:bg-gray-700"
-          xmlns="http://www.w3.org/2000/svg"
-          width="35"
-          height="30"
-          fill="currentColor"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+          <svg
+            class="mx-3 mt-1 text-white"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="23"
+            height="23"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M 9 2 C 5.1458514 2 2 5.1458514 2 9 C 2 12.854149 5.1458514 16 9 16 C 10.747998 16 12.345009 15.348024 13.574219 14.28125 L 14 14.707031 L 14 16 L 20 22 L 22 20 L 16 14 L 14.707031 14 L 14.28125 13.574219 C 15.348024 12.345009 16 10.747998 16 9 C 16 5.1458514 12.854149 2 9 2 z M 9 4 C 11.773268 4 14 6.2267316 14 9 C 14 11.773268 11.773268 14 9 14 C 6.2267316 14 4 11.773268 4 9 C 4 6.2267316 6.2267316 4 9 4 z"
+            ></path>
+          </svg>
+          <input
+            id="inputNav"
+            spellcheck="false"
+            type="text"
+            class="w-full bg-transparent outline-none text-white"
+            placeholder="Cari di sini..."
+            autocomplete="off"
           />
-        </svg>
-      </div>
-      <div class="mr-14">
-        <button
-          id="loginBtn"
-          class="bg-dark1 py-2 px-5 font-bold tracking-wide rounded-md"
-        >
-          MASUK
-        </button>
+          <svg
+            id="closeInputNav"
+            class="bi bi-x mx-1 mt-[1px] p-1 cursor-pointer bg-transparent rounded-md transition duration-200 hover:bg-gray-700"
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="30"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+            />
+          </svg>
+        </div>
+        <div class="mr-3 md:mr-14">
+          <button
+            id="loginBtn"
+            class="bg-dark3 py-2 px-3 font-semibold tracking-wide rounded-lg text-sm md:px-4"
+          >
+            MASUK
+          </button>
+        </div>
       </div>
     </nav>
 
     <section
       id="loginPage"
-      class="hidden items-center justify-center absolute top-0 left-0 z-10 w-full backdrop-blur-md h-screen text-white transition duration-200"
+      class="flex items-center justify-center absolute top-0 left-0 -z-10 w-full backdrop-blur-0 h-screen text-white transition duration-300"
     >
       <div
-        class="flex flex-col bg-dark2 w-[26rem] h-[35rem] rounded-3xl shadow-lg relative"
+        id="loginParent"
+        class="scale_0 flex flex-col w-[90%] bg-dark2 py-7 rounded-3xl shadow-lg relative transition duration-300 md:w-[26rem]"
       >
         <div
           id="closeLogin"
@@ -93,18 +112,18 @@
             />
           </svg>
         </div>
-        <div class="text-center mt-7">
-          <h3 class="font-bold text-3xl">Masuk</h3>
+        <div class="text-center">
+          <h3 class="font-bold text-3xl">Portal</h3>
           <p class="font-medium text-sm mt-1">Masuk ke Realm-Yoke</p>
         </div>
         <form action="" class="mt-12 flex flex-col w-[85%] mx-auto">
-          <label for="" class="">Email</label>
+          <label>Email</label>
           <input
             spellcheck="false"
             type="email"
             class="mb-4 h-10 bg-transparent border-b outline-none"
           />
-          <label for="" class="">Password</label>
+          <label>Password</label>
           <input
             spellcheck="false"
             type="password"
@@ -133,21 +152,55 @@
             <p class="px-2 bg-dark2">OR</p>
           </div>
           <button
-            class="py-3 gap-2 rounded-full bg-blue-600 text-white font-medium flex items-center justify-center transition duration-300 hover:opacity-70"
+            class="py-3 mb-5 rounded-full bg-white text-black font-medium flex items-center justify-center transition duration-300 hover:opacity-70"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="20"
-              height="20"
-              fill="currentColor"
-              class="bi bi-facebook"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
-              />
-            </svg>
-            Masuk Facebook
+            <div class="flex items-center justify-center gap-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                preserveAspectRatio="xMidYMid"
+                viewBox="0 0 256 262"
+                id="google"
+              >
+                <path
+                  fill="#4285F4"
+                  d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622 38.755 30.023 2.685.268c24.659-22.774 38.875-56.282 38.875-96.027"
+                ></path>
+                <path
+                  fill="#34A853"
+                  d="M130.55 261.1c35.248 0 64.839-11.605 86.453-31.622l-41.196-31.913c-11.024 7.688-25.82 13.055-45.257 13.055-34.523 0-63.824-22.773-74.269-54.25l-1.531.13-40.298 31.187-.527 1.465C35.393 231.798 79.49 261.1 130.55 261.1"
+                ></path>
+                <path
+                  fill="#FBBC05"
+                  d="M56.281 156.37c-2.756-8.123-4.351-16.827-4.351-25.82 0-8.994 1.595-17.697 4.206-25.82l-.073-1.73L15.26 71.312l-1.335.635C5.077 89.644 0 109.517 0 130.55s5.077 40.905 13.925 58.602l42.356-32.782"
+                ></path>
+                <path
+                  fill="#EB4335"
+                  d="M130.55 50.479c24.514 0 41.05 10.589 50.479 19.438l36.844-35.974C195.245 12.91 165.798 0 130.55 0 79.49 0 35.393 29.301 13.925 71.947l42.211 32.783c10.59-31.477 39.891-54.251 74.414-54.251"
+                ></path>
+              </svg>
+              <p>Continue with Google</p>
+            </div>
+          </button>
+          <button
+            class="py-3 rounded-full bg-blue-600 text-white font-medium flex items-center justify-center transition duration-300 hover:opacity-70"
+          >
+            <div class="flex items-center justify-center gap-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                fill="currentColor"
+                class="bi bi-facebook"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
+                />
+              </svg>
+              <p>Continue with Facebook</p>
+            </div>
           </button>
         </form>
       </div>
