Mengubah link pada bagian game

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="w-full flex-shrink-0 flex items-center justify-center">
           <a href="#" class="flex items-center justify-center">
             <img
-              src="src/GamesCover/gameList2/tekken-7-pc-cover.jpg"
+              src="https://1.bp.blogspot.com/-LGCgV8UCW4s/YIAfsVL6FKI/AAAAAAABJVc/2EP7rm0EtpsrcMLComdj6Sz0IUaL2UDgwCLcBGAsYHQ/s460/tekken-7-pc-cover.jpg"
               alt=""
               class="w-[90%] h-auto object-cover rounded-lg md:w-[600px] shadow-md shadow-slate-700"
             />
@@ -234,7 +234,7 @@
         <div class="w-full flex-shrink-0 flex items-center justify-center">
           <a href="#" class="flex items-center justify-center">
             <img
-              src="src/GamesCover/gameList2/tekken-8-ultimate-edition-pc-cover.jpg"
+              src="https://1.bp.blogspot.com/-fP4noG-YsEQ/ZbNPF-dLr7I/AAAAAAABals/gqzYoUoPovgu9FkHMOlsmhCa6RX5RAkAwCNcBGAsYHQ/s460/tekken-8-ultimate-edition-pc-cover.jpg"
               alt=""
               class="w-[90%] h-auto object-cover rounded-lg md:w-[600px] shadow-md shadow-slate-700"
             />
@@ -255,7 +255,7 @@
     <!-- Game List -->
     <section class="pb-7">
       <p class="uppercase font-semibold text-white text-2xl ml-5">Populer</p>
-      <div id="gameList1" class="flex font-montserrat w-full mt-5">
+      <div id="gameList1" class="gameList flex font-montserrat w-full mt-5">
         <ul
           class="gameList mx-auto my-5 w-[95%] flex flex-wrap items-center justify-center gap-3 md:gap-0 md:justify-around md:gap-y-10"
         >
@@ -263,9 +263,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/granblue-fantasy-versus-rising-deluxe-edition-multi9-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/granblue-fantasy-versus-rising-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-r2Hz2JNwIoE/ZbMSnGnjffI/AAAAAAABalM/l4gy8kamMNY7UaIy3CjaxD__n4Sq_XkdgCNcBGAsYHQ/s460/granblue-fantasy-versus-rising-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -289,9 +291,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/794492-lords-of-the-fallen-deluxe-edition-multi12-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/lords-of-the-fallen-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-5eYIK5bKiGk/ZSnuRK31ljI/AAAAAAABZd8/af-MZvAv-3sV-LHJYe_hKYSoaNTnpRFUwCNcBGAsYHQ/s460/lords-of-the-fallen-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -315,9 +319,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/drug-dealer-simulator-2-multi11-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/drug-dealer-simulator-2-pc-cover.jpg"
+                src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTTCb6ZzVh17Yw-YPku8dBJJfjqlm90rp3iMM5LRBYScLlbMV-4Bk_J7yoK6pPrptA3iEANqhyWzXTO92Gun1jZDh8ndIpSAbwjgynDsw0sFjxE13itArtmg5U1WJi_ti0CVv3RFvGbgPm81KosflbogIWKnlPcllG2sRY7sLzCKFTyAH4Xq32H3mGyqQ/s460/drug-dealer-simulator-2-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -341,9 +347,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/crown-wars-the-black-prince-multi13-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/crown-wars-the-black-prince-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-Ao--J8BZI70/ZlAm-b6CONI/AAAAAAABcnI/RDAJ_GFrbaQn1G7xF257IMO4TTbymIzDACNcBGAsYHQ/s460/crown-wars-the-black-prince-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -367,9 +375,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/947977-cities-skylines-ii-ultimate-edition-multi12-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/cities-skylines-ii-ultimate-edition-pc-cover.jpg"
+                src="https://blogger.googleusercontent.com/img/a/AVvXsEj2toQUoROV3AeMrYTJr3-noJignl2qWoYDGeSEmX3hxPgqe5p0X3mM8LTjrBXo3xod9YG5s31AKU5vrBouhAzYLcolaE8DEX_g1wv1nRn9TDflB2rPhn76rX2r47EjSsRNNJ7FHVO8lLiIm-mAZBKbuVgZ0mte3OAqctmQsy3JVen4QkpE6njfFlIwljw"
                 alt=""
                 class="rounded-xl"
               />
@@ -393,9 +403,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/854749-nickelodeon-all-star-brawl-2-deluxe-edition-multi6-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/nickelodeon-all-star-brawl-2-pc-cover.jpg"
+                src="https://blogger.googleusercontent.com/img/a/AVvXsEgoTdAKfsE5LYY0-kiIYYlYK4Un2krQwLoA7q4qbHuIhSiDpv8vfPgzHHlO7Amlh3va7Owj0SOu9tt8jjfNPn50F31IlZXLBmH13Lgd98UHj92ujUPb2xEs6kzdvfv6jnzG1XS1YzIo5n_5Gut5yjsDP3wZ4OG7VrHI1p5WMF1NEQmXHgSQ_HhHNcgs2L8"
                 alt=""
                 class="rounded-xl"
               />
@@ -419,9 +431,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/broken-roads-multi8-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/broken-roads-pc-cover.jpg"
+                src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCRP0b9bcfmYn4H1jt5CYEDv3AYD1n6x2GxhV5Z-PQ3PoeobI90j8bnXfAFErsSM-aECTgS0uzxWMF4cV3vcZ1bWX3ZGUFDrH0ndcELIscctEaYIBoc_I2G357gtxW6l256DyPI0IcL9I5BkETTqYdQ0Wv3Zg3jmQd36gFh5ZOANo14u6CmFjtDGYRE6k/s460/broken-roads-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -445,9 +459,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/888848-elden-ring-deluxe-edition-multi14-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/elden-ring-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-kOTxQvgEGYY/YhiUp1-hXWI/AAAAAAAAAOc/4JAEN2nbuwgMW7qyxasz9SlXO1lN9MQawCNcBGAsYHQ/s460/elden-ring-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -471,9 +487,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/crime-boss-rockay-city-multi11-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/crime-boss-rockay-city-pc-cover.jpg"
+                src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj99SkDYqlIec_ZuSXNZP50mp0gAVTNORc4gaTBuyf3i84NShFaVh7u5xcDWYhT5oGtfMkoZ7O1eF5fe6OTZveVR5TY4iNzX9Is4wRH8MO5j1uBOviIWRBgJDPCm6mgdqD1DvGYwsrHLdgAoLl_lJVasHCqDPmpj2Ge_8dntjziOAp5dWC1yJV0OZeVV3k/s460/crime-boss-rockay-city-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -497,9 +515,9 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a href="https://www.ovagames.com/last-epoch-multi9-elamigos.html">
               <img
-                src="src/GamesCover/gameList1/last-epoch-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-9u49PuHhvq4/ZdbcDKWcLEI/AAAAAAABavA/W_5ozmGpwgIJ6HNT6C59p9hLfJvXEcriQCNcBGAsYHQ/s460/last-epoch-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -523,9 +541,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/394845-dragon-ball-z-kakarot-ultimate-edition-multi13-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/dragon-ball-z-kakarot-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-oVK3h-DP4no/Y8GaOxnFkyI/AAAAAAABVPQ/5o7DaixAwDgJVHibPzDF4Ajn70rHoQ13wCNcBGAsYHQ/s460/dragon-ball-z-kakarot-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -549,9 +569,11 @@
           <li
             class="flex flex-col text-white bg-red-950 object-cover w-[48%] rounded-xl pb-3 shadow-lg shadow-slate-800 md:w-[30%]"
           >
-            <a href="">
+            <a
+              href="https://www.ovagames.com/374868-age-of-empires-ii-definitive-edition-multi17-elamigos.html"
+            >
               <img
-                src="src/GamesCover/gameList1/age-of-empires-2-definitive-edition-pc-cover.jpg"
+                src="https://1.bp.blogspot.com/-De0Ccphblww/X28CFj2gZ1I/AAAAAAABDM8/8ZTz17rucAUdzlB2XI8a-1lRnmGsxVA2QCLcBGAsYHQ/s460/age-of-empires-2-definitive-edition-pc-cover.jpg"
                 alt=""
                 class="rounded-xl"
               />
@@ -573,7 +595,7 @@
         </ul>
       </div>
 
-      <div id="gameList2" class="hidden font-montserrat w-full mt-5">
+      <div id="gameList2" class="gameList hidden font-montserrat w-full mt-5">
         <ul
           class="gameList mx-auto my-5 w-[95%] flex flex-wrap items-center justify-center gap-3 md:gap-0 md:justify-around md:gap-y-10"
         >
